Add concept services
