# src/main/webapp/swagger-ui/swagger-rmes.yaml
@@ -11,6 +11,7 @@ info:
 tags:
   - name: nomenclatures
   - name: géographie
+  - name: concepts
 paths:
   '/codes/cj/n2/{code}':
     get:
@@ -394,6 +395,71 @@ paths:
           description: L'en-tête HTTP 'Accept' contient une valeur non acceptée
         '500':
           description: Erreur interne du serveur
+  '/definition/concepts':
+    get:
+      tags:
+        - concepts
+      summary: Informations sur les concepts de l'Insee
+      operationId: getconcepts
+      parameters:
+        - name: libelle
+          in: query
+          description: Recherche dans les libellés
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Concepts'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Concepts'
+        '400':
+          description: La syntaxe de la requête est incorrecte
+        '401':
+          description: Une authentification est nécessaire pour accéder à la ressource
+        '404':
+          description: Ressource non trouvée
+        '406':
+          description: L'en-tête HTTP 'Accept' contient une valeur non acceptée
+        '500':
+          description: Erreur interne du serveur
+  '/definition/concept/{id}':
+    get:
+      tags:
+        - concepts
+      summary: Informations sur un concept de l'Insee
+      operationId: getconcept
+      parameters:
+        - name: id
+          in: path
+          description: 'Identifiant du concept (format : c[0-9]{4})'
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Concept'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Concept'
+        '400':
+          description: La syntaxe de la requête est incorrecte
+        '401':
+          description: Une authentification est nécessaire pour accéder à la ressource
+        '404':
+          description: Ressource non trouvée
+        '406':
+          description: L'en-tête HTTP 'Accept' contient une valeur non acceptée
+        '500':
+          description: Erreur interne du serveur
+
 components:
   schemas:
     CategorieJuridiqueNiveauII:
@@ -630,3 +696,42 @@ components:
           example: Japon
           xml:
             name: IntituleEntier
+    Concept:
+      type: object
+      description: Objet représentant un concept
+      xml:
+        name: Concept
+      properties:
+        id:
+          type: string
+          example: c2066
+          xml:
+            attribute: true
+        uri:
+          type: string
+          example: 'http://id.insee.fr/concepts/definition/c2066'
+          xml:
+            attribute: true
+        intitule:
+          type: string
+          example: Auto-entrepreneur
+          xml:
+            name: Intitule
+        remplace:
+          type: string
+          example: ''
+          xml:
+            name: Remplace
+        estRemplacePar:
+          type: string
+          example: 'http://qfrmessnczlht01/concepts/definition/c1500'
+          xml:
+            name: EstRemplacePar
+    Concepts:
+      type: array
+      description: Tableau représentant des concepts
+      items:
+        $ref: '#/components/schemas/Concept'
+      xml:
+        wrapped: true
+        name: Concepts
